--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@ionic-native/file": "^4.12.0",
     "@ionic-native/file-chooser": "^4.12.2",
     "@ionic-native/file-path": "^4.12.2",
-    "@ionic-native/file-picker": "^4.12.2",
     "@ionic-native/media": "^4.12.0",
     "@ionic-native/media-capture": "^4.12.0",
     "@ionic-native/splash-screen": "4.3.2",
@@ -40,12 +39,12 @@
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-filechooser": "^1.0.1",
     "cordova-plugin-filepath": "^1.4.2",
-    "cordova-plugin-filepicker": "^1.1.5",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
-    "cordova-plugin-ionic-webview": "^2.1.0",
+    "cordova-plugin-ionic-webview": "^2.1.4",
     "cordova-plugin-media": "^5.0.2",
     "cordova-plugin-media-capture": "^3.0.2",
     "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^4.12.1",
     "ionic-angular": "3.9.2",
@@ -67,7 +66,9 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-file": {},
       "cordova-plugin-media": {
@@ -77,11 +78,11 @@
       "cordova-plugin-camera": {},
       "cordova-plugin-filechooser": {},
       "cordova-plugin-filepath": {},
-      "cordova-plugin-filepicker": {}
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
